grafana/operator/generated/grafana-operator/templates/networkpolicy.yaml
---
# Source: grafana-operator/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-operator
    app.kubernetes.io/version: 5.11.0
    helm.sh/chart: grafana-operator-4.4.13
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: grafana-operator
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 8080
        # Allow access to Grafana. As it does not have a label to identify its created grafana instances, we will use the standard grafana port (currently hardcoded in the operator)
        - port: 3000
